--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "^5.8.3"
   },
   "devDependencies": {
+    "@types/node": "^22.15.17",
     "@types/react": "19.1.3",
     "@typescript-eslint/eslint-plugin": "^8.32.0",
     "@typescript-eslint/parser": "^8.32.0",
